Add optional IA integration (Task 6, RF-09, RF-10, RF-11)
- AiProperties and app.ai config: enabled, api-key, endpoint, model, timeout
- AiService: suggestTypeAndPriority (RF-10), generateSummary (RF-09); fallbacks when disabled or on error
- POST /api/ai/suggest and GET /api/requests/{id}/summary; suggestions never auto-applied
- AiController, SuggestRequestDto, SuggestResponseDto, SummaryResponseDto
- README: Optional AI integration section (config, env vars, behavior when unavailable)
- AiServiceTest: suggest disabled returns available false; summary returns fallback

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -20,6 +20,15 @@ spring:
 server:
   port: 9000
 
+# Optional IA integration (RF-09, RF-10, RF-11). When disabled or misconfigured, AI endpoints return fallbacks.
+app:
+  ai:
+    enabled: false
+    api-key: ${OPENAI_API_KEY:}
+    endpoint: ${OPENAI_API_URL:https://api.openai.com/v1/chat/completions}
+    model: ${OPENAI_MODEL:gpt-3.5-turbo}
+    timeout-seconds: 10
+
 ---
 spring:
   config:
