feat: JWT auth, role-based authorization, Tailwind migration and Uniquindío-style palette
Backend:
- Spring Security, JWT login (POST /api/auth/login), JwtUtil and filter
- Roles STUDENT, STAFF, ADMIN; PreAuthorize on request endpoints
- User.passwordHash, DevAuthBootstrap for first-user password

Frontend:
- AuthService, login page, auth guard, HTTP interceptor (Bearer + 401 logout)
- Tailwind CSS only: remove all component CSS, add tailwind.config and DESIGN.md
- Uniquindío-inspired theme: green primary, cream surface, gold nav accent

Docs: AGENTS.md, README, frontend/DESIGN.md updated.

--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -9,3 +9,9 @@ spring:
       ddl-auto: create-drop
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: false
+
+# JWT: 32+ bytes required for HS256 (tests only)
+app:
+  jwt:
+    secret: test-secret-at-least-32-bytes-long-for-hs256
+    expiration-seconds: 3600
