--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -27,7 +27,7 @@ app:
     secret: ${JWT_SECRET:your-256-bit-secret-change-in-production-must-be-long-enough-for-hs256}
     expiration-seconds: ${JWT_EXPIRATION_SECONDS:86400}
   ai:
-    enabled: false
+    enabled: ${APP_AI_ENABLED:false}
     api-key: ${OPENAI_API_KEY:}
     endpoint: ${OPENAI_API_URL:https://api.openai.com/v1/chat/completions}
     model: ${OPENAI_MODEL:gpt-3.5-turbo}
